[java] Use Integer.valueOf rather than new Integer